--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:0.7-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 11 Jan 2020 11:38:25 +0000
+
 hardened-kernel (3:0.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
