--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:1.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Jan 2020 10:37:52 +0000
+
 hardened-kernel (3:1.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
