--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:1.3-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 19 Jan 2020 14:02:22 +0000
+
 hardened-kernel (3:1.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
