--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:1.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 20 Jan 2020 13:50:35 +0000
+
 hardened-kernel (3:1.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
