--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:1.5-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 21 Jan 2020 08:07:30 +0000
+
 hardened-kernel (3:1.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
