--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:1.8-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 13 Feb 2020 18:38:41 +0000
+
 hardened-kernel (3:1.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
