--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:2.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 05 Mar 2020 13:35:38 +0000
+
 hardened-kernel (3:2.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
