--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:2.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 13 Apr 2020 10:55:43 +0000
+
 hardened-kernel (3:2.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
