--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:2.9-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 03 Jun 2020 20:32:55 +0000
+
 hardened-kernel (3:2.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
