--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:3.0-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 29 Oct 2020 20:18:10 +0000
+
 hardened-kernel (3:2.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
