--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:3.1-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 30 Oct 2020 13:55:57 +0000
+
 hardened-kernel (3:3.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
