--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:3.2-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 14 Dec 2020 06:53:59 +0000
+
 hardened-kernel (3:3.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
