--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:3.4-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 23 Dec 2020 15:03:27 +0000
+
 hardened-kernel (3:3.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
