--- a/debian/changelog
+++ b/debian/changelog
@@ -2,202 +2,202 @@ hardened-kernel (3:3.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 23 Dec 2020 15:03:27 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 23 Dec 2020 15:03:27 +0000
 
 hardened-kernel (3:3.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 20 Dec 2020 12:55:06 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 20 Dec 2020 12:55:06 +0000
 
 hardened-kernel (3:3.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 14 Dec 2020 06:53:59 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 14 Dec 2020 06:53:59 +0000
 
 hardened-kernel (3:3.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 30 Oct 2020 13:55:57 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 30 Oct 2020 13:55:57 +0000
 
 hardened-kernel (3:3.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 29 Oct 2020 20:18:10 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 29 Oct 2020 20:18:10 +0000
 
 hardened-kernel (3:2.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 03 Jun 2020 20:32:55 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 03 Jun 2020 20:32:55 +0000
 
 hardened-kernel (3:2.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 16 Apr 2020 12:32:20 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 16 Apr 2020 12:32:20 +0000
 
 hardened-kernel (3:2.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 13 Apr 2020 19:40:02 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 13 Apr 2020 19:40:02 +0000
 
 hardened-kernel (3:2.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 13 Apr 2020 10:55:43 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 13 Apr 2020 10:55:43 +0000
 
 hardened-kernel (3:2.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 02 Apr 2020 11:46:24 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 02 Apr 2020 11:46:24 +0000
 
 hardened-kernel (3:2.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 01 Apr 2020 14:39:58 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 01 Apr 2020 14:39:58 +0000
 
 hardened-kernel (3:2.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 12 Mar 2020 08:42:17 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 12 Mar 2020 08:42:17 +0000
 
 hardened-kernel (3:2.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 05 Mar 2020 13:35:38 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 05 Mar 2020 13:35:38 +0000
 
 hardened-kernel (3:2.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 03 Mar 2020 14:18:57 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 03 Mar 2020 14:18:57 +0000
 
 hardened-kernel (3:2.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 03 Mar 2020 14:09:56 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 03 Mar 2020 14:09:56 +0000
 
 hardened-kernel (3:1.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 15 Feb 2020 20:28:48 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 15 Feb 2020 20:28:48 +0000
 
 hardened-kernel (3:1.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 13 Feb 2020 18:38:41 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 13 Feb 2020 18:38:41 +0000
 
 hardened-kernel (3:1.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Thu, 23 Jan 2020 13:49:28 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Thu, 23 Jan 2020 13:49:28 +0000
 
 hardened-kernel (3:1.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 22 Jan 2020 11:39:41 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 22 Jan 2020 11:39:41 +0000
 
 hardened-kernel (3:1.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Tue, 21 Jan 2020 08:07:30 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Tue, 21 Jan 2020 08:07:30 +0000
 
 hardened-kernel (3:1.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 20 Jan 2020 13:50:35 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 20 Jan 2020 13:50:35 +0000
 
 hardened-kernel (3:1.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sun, 19 Jan 2020 14:02:22 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sun, 19 Jan 2020 14:02:22 +0000
 
 hardened-kernel (3:1.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Jan 2020 16:46:23 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 17 Jan 2020 16:46:23 +0000
 
 hardened-kernel (3:1.1-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Jan 2020 10:37:52 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 17 Jan 2020 10:37:52 +0000
 
 hardened-kernel (3:1.0-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Fri, 17 Jan 2020 08:31:27 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Fri, 17 Jan 2020 08:31:27 +0000
 
 hardened-kernel (3:0.9-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Wed, 15 Jan 2020 16:03:36 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Wed, 15 Jan 2020 16:03:36 +0000
 
 hardened-kernel (3:0.8-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 11 Jan 2020 20:18:13 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 11 Jan 2020 20:18:13 +0000
 
 hardened-kernel (3:0.7-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 11 Jan 2020 11:38:25 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 11 Jan 2020 11:38:25 +0000
 
 hardened-kernel (3:0.6-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 11 Jan 2020 11:35:49 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 11 Jan 2020 11:35:49 +0000
 
 hardened-kernel (3:0.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 11 Jan 2020 10:29:46 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 11 Jan 2020 10:29:46 +0000
 
 hardened-kernel (3:0.4-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Sat, 11 Jan 2020 10:16:03 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 11 Jan 2020 10:16:03 +0000
 
 hardened-kernel (3:0.3-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 30 Dec 2019 10:59:05 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 30 Dec 2019 10:59:05 +0000
 
 hardened-kernel (3:0.2-1) unstable; urgency=medium
 
   * New upstream version (local package).
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 23 Dec 2019 13:31:51 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 23 Dec 2019 13:31:51 +0000
 
 hardened-kernel (3:0.1-2) unstable; urgency=low
 
   * Initial release.
 
- -- Patrick Schleizer <adrelanos@riseup.net>  Mon, 23 Dec 2019 17:56:29 +0000
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 23 Dec 2019 17:56:29 +0000
