--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:3.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Sat, 05 Jun 2021 20:47:47 +0000
+
 hardened-kernel (3:3.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
