--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,9 @@
+hardened-kernel (3:4.6-1) unstable; urgency=medium
+
+  * New upstream version (local package).
+
+ -- Patrick Schleizer <adrelanos@whonix.org>  Mon, 17 Jul 2023 15:34:33 +0000
+
 hardened-kernel (3:4.5-1) unstable; urgency=medium
 
   * New upstream version (local package).
